syntax = "proto3";
package inventory;

message GetItemRequest { int32 id = 1; }

message Item {
  int32 id = 1;
  string name = 2;
  string type = 3;
  string rarity = 4;  // string label for convenience
  int32 quantity = 5;
}

service ItemService {
  rpc GetItemById (GetItemRequest) returns (Item);
}
